--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle": "1.1.2",
     "@radix-ui/react-toggle-group": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
+    "@reduxjs/toolkit": "^2.11.2",
     "ag-grid-community": "^35.0.0",
     "ag-grid-react": "^35.0.0",
     "class-variance-authority": "0.7.1",
@@ -51,6 +52,7 @@
     "react-day-picker": "8.10.1",
     "react-hook-form": "7.55.0",
     "react-popper": "2.3.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "2.1.7",
     "react-responsive-masonry": "2.7.1",
     "react-router-dom": "^7.11.0",
